<resources>

    <string name="app_name">Gametec</string>
    <string name="map_key">AIzaSyCMju22OQhtDy6_pfv73OhOCe1QtoHF3bk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="alarm">ALARM</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="last_update">LAST UPDATE</string>
    <string name="update">UPDATE</string>
    <string name="balance">BALANCE</string>
    <string name="in">IN</string>
    <string name="out">OUT</string>
    <string name="total">TOTAL</string>
    <string name="block">BLOCK</string>
    <string name="bluetooth">BLUETOOTH</string>
    <string name="clock">CLOCK</string>
    <string name="door">DOOR OPENING</string>
    <string name="close">CLOSE</string>
    <string name="open">OPEN</string>
    <string name="gps">GPS</string>
    <string name="percent_control">PERCENT CONTROL</string>
    <string name="machine">MACHINE</string>
    <string name="client">CLIENT</string>
    <string name="reset">RESET</string>
    <string name="reset_machine">Reset Machine</string>
    <string name="last_reset">LAST RESET</string>
    <string name="ticket">TICKETS</string>
    <string name="month_total">MONTH TOTAL</string>
    <string name="session_expired">Session Expired, Log in Again!</string>
    <string name="connection_timeout">Connection Timeout! Try Again</string>
    <string name="loading">Loading…</string>
    <string name="no_internet">No Internet!</string>
    <string name="email_no_valid">Email is not Valid</string>
    <string name="input_field">Input all field first!</string>
    <string name="logging_in">Logging in....</string>
    <string name="wanna_exit">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="pin_digit">Pin should be 4 digits</string>
    <string name="pint_set_success">Your Pin is set successfully</string>
    <string name="incorrect_pin">You\'ve typed incorrect pin</string>
    <string name="set_your_pin">SET YOUR PIN</string>
    <string name="set_digit_pin">SET-4 DIGIT PIN</string>
    <string name="set">SET</string>
    <string name="verify">Verify</string>
    <string name="insert_your_pin">INSERT YOUR PIN</string>
    <string name="touch_fingerprint">Touch the fingerprint sensor!</string>
    <string name="cancel">Cancel</string>
    <string name="unblock">UNBLOCK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bluetooh_already_enabled">Bluetooth Already Enabled!</string>
    <string name="bluetooth_not_support">Bluetooth Not Supported!</string>
    <string name="no_data_found">No Data Found</string>
    <string name="percent_empty">Percentage can\'t be empty</string>
    <string name="invalid_percentenge">You\'ve typed invalid percentage</string>
    <string name="set_machine_percentage">Set machine percentage</string>
    <string name="change_percentage">CHANGE PERCENTAGE</string>

</resources>
