<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".FragmentsPackages.SetPinFragment">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        />


    <TextView
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:text="@string/set_digit_pin"
        android:layout_marginTop="16dp"
        />


    <EditText
        android:id="@+id/pin_number"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_balck"
        android:gravity="center"
        android:hint="@string/set_your_pin"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:singleLine="true"
        android:textSize="18sp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:id="@+id/set_btn"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/red_btn_bg"
        android:text="@string/set"
        android:textColor="@color/colorWhite"
        />


</LinearLayout>