<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentsPackages.PercentFragement">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:background="#00000000"
        android:foreground="?selectableItemBackground"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/bacl_arrow" />

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:text="@string/percent_control"
        android:textColor="#000000"
        android:textSize="17sp" />

    <LinearLayout
        android:id="@+id/middle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/last_update"
        android:layout_below="@id/main_logo"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/machine"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/machine_percent"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/border_balck"
            android:gravity="center"
            android:text="0%"
            android:textSize="15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/client"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/client_percent"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/border_balck"
            android:gravity="center"
            android:text="0%"
            android:textSize="15sp" />


    </LinearLayout>


    <Button
        android:id="@+id/percent_update_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/green_btn_bg"
        android:foreground="?selectableItemBackground"
        android:text="@string/update"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/btn_set_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/red_btn_bg"
        android:foreground="?selectableItemBackground"
        android:text="@string/change_percentage"
        android:textColor="@color/colorWhite" />


    <TextView
        android:id="@+id/percent_last_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/percent_update_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="00:00 00" />

    <TextView
        android:id="@+id/last_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/percent_last_update"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/last_update" />


</RelativeLayout>