<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentsPackages.ResetFragment">


    <ImageButton
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:background="#00000000"
        android:padding="8dp"
        android:foreground="?selectableItemBackground"
        android:scaleType="fitCenter"
        android:id="@+id/back_button"
        android:src="@drawable/bacl_arrow" />

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:text="@string/reset"
        android:textColor="#000000"
        android:textSize="17sp" />

    <LinearLayout
        android:id="@+id/middle_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/last_update"
        android:layout_below="@id/main_logo"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/Reset_onButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="22dp"
            android:background="@drawable/red_btn_bg"
            android:foreground="?selectableItemBackground"
            android:text="@string/reset_machine"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/last_reset"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/reset_time"
            android:text="00/00/0000 00:00 00"
            />


    </LinearLayout>


    <Button
        android:id="@+id/reset_update_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        android:background="@drawable/green_btn_bg"
        android:foreground="?selectableItemBackground"
        android:text="@string/update"
        android:textColor="@color/colorWhite" />


    <TextView
        android:id="@+id/reset_last_update_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reset_update_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="00:00 00" />

    <TextView
        android:id="@+id/last_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/reset_last_update_time"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/last_update" />


</RelativeLayout>