<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentsPackages.BalanceFragment">

    <ImageButton
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="fitCenter"
        android:background="#00000000"
        android:padding="8dp"
        android:src="@drawable/bacl_arrow"
        android:id="@+id/back_button"
        android:layout_marginTop="22dp"
        android:foreground="?selectableItemBackground"
        android:layout_marginStart="8dp"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:layout_marginTop="22dp"
        android:id="@+id/main_logo"
        />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:textSize="17sp"
        android:textColor="#000000"
        android:text="@string/balance" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:id="@+id/middle_layout"
        android:layout_below="@id/main_logo"
        android:layout_marginTop="5dp"
        android:layout_above="@id/last_update"
        android:gravity="center"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/balance_in"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_balck"
            android:gravity="center"
            android:text="00"
            android:textSize="15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/balance_out"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_balck"
            android:gravity="center"
            android:text="00"
            android:textSize="15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/balance_total"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_balck"
            android:gravity="center"
            android:text="00"
            android:textSize="15sp" />
    </LinearLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/green_btn_bg"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:text="@string/update"
        android:foreground="?selectableItemBackground"
        android:layout_marginBottom="16dp"
        android:id="@+id/balance_update_btn"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorWhite"
        />


    <TextView
        android:id="@+id/balance_last_update_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/balance_update_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="00:00 00" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_update"
        android:id="@+id/last_update"
        android:layout_above="@id/balance_last_update_time"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        />



</RelativeLayout>